--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "ng build",
-
+    "heroku-postbuild": "ng build"
   },
   "eslintConfig": {
     "extends": [
